# openbsd

./: Makefile  Makefile.cross
distrib/: Makefile
etc/: MAKEDEV.common  MAKEDEV.local  MAKEDEV.man  MAKEDEV.mansub  MAKEDEV.mi  MAKEDEV.sub  Makefile  Makefile.inc  aliases  bgpd.conf  bootptab  ccd.conf  changelist  chio.conf  crontab  csh.cshrc  csh.login  csh.logout  daily  dhclient.conf  dhcpd.conf  dhcpd.interfaces  dm.conf  dvmrpd.conf  exports  fbtab.head  ftpchroot  ftpusers  gettytab  hostapd.conf  hosts  hosts.equiv  hosts.lpd  hoststated.conf  ifaliases  ifstated.conf  iked.conf  (+62 more)
gnu/usr.bin/texinfo/: Makefile.am  Makefile.bsd-wrapper  Makefile.in  acconfig.h  acinclude.m4  aclocal.m4  configure.ac  configure.in  dir-example  texi2pdf.1  texinfo.tex
gnu/usr.bin/texinfo/doc/: Makefile.am  Makefile.in  texinfo.texi  texinfo.txi  txi-cs.tex  txi-en.tex  txi-fr.tex  txi-nl.tex
gnu/usr.bin/texinfo/emacs/: Makefile.am
gnu/usr.bin/texinfo/info/: Makefile.am  Makefile.in  dir.c  echo-area.c  info.c  makedoc.c  pcterm.c  session.c  terminal.c  tilde.c
gnu/usr.bin/texinfo/lib/: Makefile.am  Makefile.in
gnu/usr.bin/texinfo/makeinfo/: Makefile.am  Makefile.in  cmds.c  html.c  insertion.c  makeinfo.c  multi.c  node.c  xml.c
gnu/usr.bin/texinfo/util/: Makefile.am  Makefile.in  gen-dir-node  install-info-html  install-info.c  texi-docstring-magic.el  texi2dvi  texindex.c
gnu/usr.sbin/mkhybrid/src/: Makefile  Makefile.in  README.mkisofs  README.session  TODO  apple_proto.h  configure.in  defaults.h  eltorito.c  files.c  hash.c  joliet.c  mac_label_proto.h  match.c  match.h  mkhybrid.8  mkhybrid.8tbl  mkisofs.8  mkisofs.c  mkisofs.h  mkisofs.spec  multi.c  rock.c  tree.c  volume.h  write.c  write.h
gnu/usr.sbin/mkhybrid/src/diag/: Makefile  Makefile.in  dump.c  isodump.c  isoinfo.8  isoinfo.c  isovfy.c
gnu/usr.sbin/mkhybrid/src/libfile/: Makefile  apprentice.c  file.h  lfile.c  magic.5  proto.h  softmagic.c
kerberosV/src/appl/otp/: Makefile.am  Makefile.in  otp.1  otp.c  otp_locl.h  otpprint.1  otpprint.c
kerberosV/src/doc/: Makefile.am  Makefile.in  heimdal.texi  setup.texi
(+33857 files in other folders)
