# $KTH: Makefile.am,v 1.9 2004/12/27 13:58:07 lha Exp $

include $(top_srcdir)/Makefile.am.common

AUTOMAKE_OPTIONS = no-texinfo.tex

info_TEXINFOS = heimdal.texi
heimdal_TEXINFOS = \
	ack.texi \
	apps.texi \
	heimdal.texi \
	install.texi \
	install.texi \
	intro.texi \
	kerberos4.texi \
	migration.texi \
	misc.texi \
	programming.texi \
	setup.texi \
	setup.texi \
	whatis.texi \
	win2k.texi
